Disable YouTube autoplay in remedial video system

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>声韵 SoundPath — Chinese Pronunciation AI</title>
+<title>聲韻 SoundPath — Chinese Pronunciation AI</title>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&family=Inter:wght@300;400;500;600&family=Noto+Serif+SC:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 </head>
@@ -12,7 +12,7 @@
 <!-- HEADER -->
 <header>
   <div class="logo">
-    <div class="logo-zh">声韵</div>
+    <div class="logo-zh">聲韻</div>
     <div class="logo-en">SoundPath</div>
   </div>
   <nav>
@@ -144,9 +144,9 @@
 
     <div class="bd-categories" id="bdCategories">
 
-      <!-- Simple Finals (韵母·单韵母) -->
+      <!-- Simple Finals (韻母·單韻母) -->
       <div class="bd-cat">
-        <div class="bd-cat-label"><strong>Simple Finals</strong>单韵母</div>
+        <div class="bd-cat-label"><strong>Simple Finals</strong>單韻母</div>
         <div class="bd-bar-track"><div class="bd-bar-fill col-a" data-w="88%" id="bar-sf"></div></div>
         <div class="bd-pct high">88%</div>
         <div class="bd-badge mastered">Mastered</div>
@@ -161,9 +161,9 @@
 
       <div class="bd-divider" style="grid-column:1/-1"></div>
 
-      <!-- Initials (声母) -->
+      <!-- Initials (聲母) -->
       <div class="bd-cat">
-        <div class="bd-cat-label"><strong>Initials</strong>声母</div>
+        <div class="bd-cat-label"><strong>Initials</strong>聲母</div>
         <div class="bd-bar-track"><div class="bd-bar-fill col-b" data-w="71%" id="bar-ini"></div></div>
         <div class="bd-pct mid">71%</div>
         <div class="bd-badge improving">Improving</div>
@@ -181,9 +181,9 @@
 
       <div class="bd-divider" style="grid-column:1/-1"></div>
 
-      <!-- Compound Finals (韵母·复韵母) -->
+      <!-- Compound Finals (韻母·複韻母) -->
       <div class="bd-cat">
-        <div class="bd-cat-label"><strong>Compound Finals</strong>复韵母</div>
+        <div class="bd-cat-label"><strong>Compound Finals</strong>複韻母</div>
         <div class="bd-bar-track"><div class="bd-bar-fill col-c" data-w="74%" id="bar-cf"></div></div>
         <div class="bd-pct mid">74%</div>
         <div class="bd-badge improving">Improving</div>
@@ -201,9 +201,9 @@
 
       <div class="bd-divider" style="grid-column:1/-1"></div>
 
-      <!-- Tones (声调) -->
+      <!-- Tones (聲調) -->
       <div class="bd-cat">
-        <div class="bd-cat-label"><strong>Tones</strong>声调</div>
+        <div class="bd-cat-label"><strong>Tones</strong>聲調</div>
         <div class="bd-bar-track"><div class="bd-bar-fill col-d" data-w="63%" id="bar-t"></div></div>
         <div class="bd-pct low">63%</div>
         <div class="bd-badge focus">Needs Focus</div>
@@ -244,9 +244,9 @@
     <div class="utterance-display" id="utteranceDisplay"></div>
     <!-- Phonetic color legend -->
     <div class="ph-legend">
-      <div class="ph-leg-item"><div class="ph-swatch cl-tone"></div>Tone Error (红) — 能</div>
-      <div class="ph-leg-item"><div class="ph-swatch cl-initial"></div>Initial Error (金) — 星</div>
-      <div class="ph-leg-item"><div class="ph-swatch cl-compound"></div>Compound Error (蓝) — 校</div>
+      <div class="ph-leg-item"><div class="ph-swatch cl-tone"></div>Tone Error </div>
+      <div class="ph-leg-item"><div class="ph-swatch cl-initial"></div>Initial Error </div>
+      <div class="ph-leg-item"><div class="ph-swatch cl-compound"></div>Compound Error </div>
     </div>
   </div>
 
