--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 <!-- HERO -->
 <section class="hero">
   <div class="hero-left">
-    <div class="kicker">AI-Powered Chinese Pronunciation</div>
+    <div class="kicker">AI-Powered Mandarin Pronunciation</div>
     <h1 class="hero-title">Speak Mandarin<br>with <em>native</em><br>precision.</h1>
-    <p class="hero-sub">Upload your recording. AI analyzes tones, initials, and finals — visualizing pitch contours, marking errors in color, and instantly pushing targeted correction videos.</p>
+    <p class="hero-sub">Instant AI analysis for tones, initials, and finals. Visualize your pitch, pinpoint errors, and get targeted correction videos in seconds.</p>
     <div class="hero-actions">
-      <button class="btn-primary" onclick="document.getElementById('upload-section').scrollIntoView({behavior:'smooth'})"><span>Analyze My Voice</span></button>
+      <button class="btn-primary" onclick="document.getElementById('upload-section').scrollIntoView({behavior:'smooth'})"><span>Analyze My Pronunciation</span></button>
     </div>
   </div>
   <div class="hero-right" style="display:none"></div>
@@ -104,7 +104,7 @@
 <!-- STEP 3: PITCH CONTOUR -->
 <section class="contour-section" id="contourSection">
   <h2 class="section-title">Your Pitch vs. <em>Native Standard</em></h2>
-  <p class="contour-intro">Each graph shows your recorded F0 curve in <span style="color:var(--vermillion)">red dashed</span> vs. the native target in <span style="color:var(--jade)">jade</span>. Deviation zones reveal where your tone contour diverges. Click any card to open the articulatory cross-section guide.</p>
+  <p class="contour-intro">Each graph shows your recorded F0 curve in <span style="color:#FF4500">red dashed</span> vs. the native target in <span style="color:#008080">teal</span>. Deviation zones reveal where your tone contour diverges.</p>
   <div class="contour-grid" id="contourGrid"></div>
 </section>
 
@@ -112,6 +112,24 @@
 <section class="score-breakdown-section" id="scoreBreakdownSection">
   <div class="breakdown-card">
     <div class="breakdown-header">
+      <div class="overall-score-ring">
+        <div class="ring-wrapper">
+          <svg class="ring-svg" viewBox="0 0 100 100">
+            <defs>
+              <linearGradient id="ringGrad" x1="0%" y1="0%" x2="100%" y2="0%">
+                <stop offset="0%" style="stop-color:#4f8ef7"/>
+                <stop offset="100%" style="stop-color:#38d8d8"/>
+              </linearGradient>
+            </defs>
+            <circle class="ring-bg" cx="50" cy="50" r="40"/>
+            <circle class="ring-fill" id="ringFill" cx="50" cy="50" r="40"/>
+          </svg>
+          <div class="ring-score-display">
+            <span class="ring-score-text" id="ringScoreText">—</span>
+          </div>
+        </div>
+        <div class="ring-caption">Overall Score</div>
+      </div>
       <div class="breakdown-header-left">
         <div class="bd-kicker">AI Pronunciation Report</div>
         <div class="bd-title">Your Pronunciation<br>Score Breakdown</div>
@@ -124,21 +142,6 @@
           <div class="ts-label">What you said</div>
           <div class="ts-text" id="targetSentenceText">—</div>
         </div>
-      </div>
-      <div class="overall-score-ring">
-        <svg class="ring-svg" viewBox="0 0 100 100">
-          <defs>
-            <linearGradient id="ringGrad" x1="0%" y1="0%" x2="100%" y2="0%">
-              <stop offset="0%" style="stop-color:#4f8ef7"/>
-              <stop offset="100%" style="stop-color:#38d8d8"/>
-            </linearGradient>
-          </defs>
-          <circle class="ring-bg" cx="50" cy="50" r="40"/>
-          <circle class="ring-fill" id="ringFill" cx="50" cy="50" r="40"/>
-          <text class="ring-score-text" x="50" y="47" id="ringScoreText">—</text>
-          <text class="ring-score-label" x="50" y="59">OVERALL</text>
-        </svg>
-        <div class="ring-caption">Overall Score</div>
       </div>
     </div>
 
@@ -244,9 +247,10 @@
     <div class="utterance-display" id="utteranceDisplay"></div>
     <!-- Phonetic color legend -->
     <div class="ph-legend">
-      <div class="ph-leg-item"><div class="ph-swatch cl-tone"></div>Tone Error </div>
-      <div class="ph-leg-item"><div class="ph-swatch cl-initial"></div>Initial Error </div>
-      <div class="ph-leg-item"><div class="ph-swatch cl-compound"></div>Compound Error </div>
+      <div class="ph-leg-item"><div class="ph-swatch cl-tone"></div>Tone Error</div>
+      <div class="ph-leg-item"><div class="ph-swatch cl-vowel"></div>Simple Final Error</div>
+      <div class="ph-leg-item"><div class="ph-swatch cl-initial"></div>Initial Error</div>
+      <div class="ph-leg-item"><div class="ph-swatch cl-compound"></div>Compound Final Error</div>
     </div>
   </div>
 
@@ -734,7 +738,7 @@ function buildSyllablesFromSTT(text) {
     'correct':       '✓ Correct',
     'tone-error':    '✗ Tone Error: pitch contour deviated from target',
     'initial-error': '⚠ Initial Error: consonant articulation needs adjustment',
-    'vowel-error':   '⚠ Vowel Error: vowel shape or lip position incorrect'
+    'vowel-error':   '⚠ Simple Final Error: vowel shape or lip position incorrect'
   };
 
   return chars.slice(0, 10).map((char, i) => {
@@ -772,14 +776,14 @@ function buildErrorSummary(syllables) {
     });
   if (initialErrs.length)
     items.push({
-      color:'#c4a8ff', icon:'🟣',
+      color:'#f1c40f', icon:'🟡',
       label:`Initial Consonant Errors — <span style="font-family:'Noto Serif SC',serif;font-size:14px">${initialErrs.map(s=>s.char).join(' ')}</span>`,
       tip:'Tongue and lip positioning for these initials needs attention. Contrast pairs like x/sh and z/zh slowly in a mirror.'
     });
   if (vowelErrs.length)
     items.push({
-      color:'#f0b429', icon:'🟠',
-      label:`Vowel / Final Errors — <span style="font-family:'Noto Serif SC',serif;font-size:14px">${vowelErrs.map(s=>s.char).join(' ')}</span>`,
+      color:'#9b59b6', icon:'🟣',
+      label:`Simple Final Errors — <span style="font-family:'Noto Serif SC',serif;font-size:14px">${vowelErrs.map(s=>s.char).join(' ')}</span>`,
       tip:'Mouth opening shape or lip rounding needs adjustment. For ü: hold "ee" tongue position while rounding lips tightly.'
     });
 
@@ -1187,12 +1191,25 @@ function buildContourCards(pitchData) {
         <canvas id="cv_full" width="900" height="160" style="width:100%;height:160px;display:block"></canvas>
       </div>
       <div class="contour-legend" style="padding:0 24px 18px;gap:24px">
-        <div class="legend-item"><div class="legend-line" style="background:#22c55e;height:2.5px;width:24px;border-radius:2px"></div><span style="font-size:11px;color:var(--text2)">Native target</span></div>
-        <div class="legend-item"><div class="legend-line" style="background:#ef4444;height:2px;width:24px;border-radius:2px;border-top:2px dashed #ef4444;background:none"></div><span style="font-size:11px;color:var(--text2)">Your recording</span></div>
+        <div class="legend-item">
+          <svg width="32" height="14" style="vertical-align:middle;margin-right:4px">
+            <line x1="0" y1="7" x2="32" y2="7" stroke="#008080" stroke-width="2.5"/>
+            <circle cx="8"  cy="7" r="3" fill="white" stroke="#008080" stroke-width="1.5"/>
+            <circle cx="16" cy="7" r="3" fill="white" stroke="#008080" stroke-width="1.5"/>
+            <circle cx="24" cy="7" r="3" fill="white" stroke="#008080" stroke-width="1.5"/>
+          </svg>
+          <span style="font-size:11px;color:var(--text2)">Native target</span>
+        </div>
+        <div class="legend-item">
+          <svg width="32" height="14" style="vertical-align:middle;margin-right:4px">
+            <line x1="0" y1="7" x2="32" y2="7" stroke="#FF4500" stroke-width="2" stroke-dasharray="6,4"/>
+          </svg>
+          <span style="font-size:11px;color:var(--text2)">Your recording</span>
+        </div>
         <div class="legend-item" style="margin-left:auto;font-size:11px;color:var(--text3)">
           <span style="display:inline-block;width:10px;height:10px;background:rgba(245,158,11,0.25);border:1px solid #f59e0b;border-radius:2px;margin-right:4px"></span>Initial error &nbsp;
           <span style="display:inline-block;width:10px;height:10px;background:rgba(59,130,246,0.20);border:1px solid #3b82f6;border-radius:2px;margin-right:4px"></span>Compound error &nbsp;
-          <span style="display:inline-block;width:10px;height:10px;background:rgba(239,68,68,0.20);border:1px solid #ef4444;border-radius:2px;margin-right:4px"></span>Tone error
+          <span style="display:inline-block;width:10px;height:10px;background:rgba(255,69,0,0.20);border:1px solid #FF4500;border-radius:2px;margin-right:4px"></span>Tone error
         </div>
       </div>
     </div>`;
@@ -1214,7 +1231,7 @@ function drawFullSentenceContour(pitchData) {
   ctx.scale(dpr, dpr);
 
   const W = cssW, H = cssH;
-  const PT = 20, PB = 36, PL = 32, PR = 16;
+  const PT = 20, PB = 36, PL = 32, PR = 56;
   const iW = W - PL - PR, iH = H - PT - PB;
   const N  = data.length;
   const STEP = iW / N;   // one column per syllable
@@ -1227,9 +1244,9 @@ function drawFullSentenceContour(pitchData) {
     const x0 = PL + i * STEP;
     const col = d.error === 'initial-error'  ? 'rgba(245,158,11,0.12)' :
                 d.error === 'compound-error' ? 'rgba(59,130,246,0.12)' :
-                                               'rgba(239,68,68,0.12)';
+                                               'rgba(255,69,0,0.12)';
     const bdr = d.error === 'initial-error'  ? '#f59e0b' :
-                d.error === 'compound-error' ? '#3b82f6' : '#ef4444';
+                d.error === 'compound-error' ? '#3b82f6' : '#FF4500';
     ctx.fillStyle = col;
     ctx.fillRect(x0, PT, STEP, iH);
     ctx.strokeStyle = bdr.replace(')', ',0.4)').replace('rgb','rgba');
@@ -1260,7 +1277,7 @@ function drawFullSentenceContour(pitchData) {
     ctx.font = '14px "Noto Serif SC",serif';
     ctx.fillStyle = d.error ? (
       d.error === 'initial-error'  ? '#f59e0b' :
-      d.error === 'compound-error' ? '#3b82f6' : '#ef4444'
+      d.error === 'compound-error' ? '#3b82f6' : '#FF4500'
     ) : 'rgba(30,41,59,0.6)';
     ctx.fillText(d.char, cx, PT + iH + 16);
     // pinyin (tone number)
@@ -1287,28 +1304,48 @@ function drawFullSentenceContour(pitchData) {
   const nPts = allPts('native');
   const uPts = allPts('user');
 
-  // Native fill
+  // Native fill (teal)
   ctx.beginPath();
   nPts.forEach((p, i) => i === 0 ? ctx.moveTo(p.x, p.y) : ctx.lineTo(p.x, p.y));
   ctx.lineTo(nPts[nPts.length-1].x, PT + iH);
   ctx.lineTo(nPts[0].x, PT + iH);
   ctx.closePath();
-  ctx.fillStyle = 'rgba(34,197,94,0.08)';
+  ctx.fillStyle = 'rgba(0,128,128,0.08)';
   ctx.fill();
 
-  // Native line
+  // Native line (solid teal)
   ctx.beginPath();
   nPts.forEach((p, i) => i === 0 ? ctx.moveTo(p.x, p.y) : ctx.lineTo(p.x, p.y));
-  ctx.strokeStyle = '#22c55e'; ctx.lineWidth = 2.5;
+  ctx.strokeStyle = '#008080'; ctx.lineWidth = 2.5;
   ctx.lineJoin = 'round'; ctx.lineCap = 'round'; ctx.setLineDash([]);
   ctx.stroke();
 
-  // User line (dashed red)
+  // Native data-point markers: open circles at each sample point
+  nPts.forEach(p => {
+    ctx.beginPath();
+    ctx.arc(p.x, p.y, 3, 0, Math.PI * 2);
+    ctx.strokeStyle = '#008080'; ctx.lineWidth = 1.5; ctx.setLineDash([]);
+    ctx.fillStyle = '#ffffff';
+    ctx.fill();
+    ctx.stroke();
+  });
+
+  // User line (dashed red-orange)
   ctx.beginPath();
   uPts.forEach((p, i) => i === 0 ? ctx.moveTo(p.x, p.y) : ctx.lineTo(p.x, p.y));
-  ctx.strokeStyle = '#ef4444'; ctx.lineWidth = 2; ctx.setLineDash([6, 4]);
+  ctx.strokeStyle = '#FF4500'; ctx.lineWidth = 2; ctx.setLineDash([6, 4]);
+  ctx.lineJoin = 'round'; ctx.lineCap = 'round';
   ctx.stroke();
   ctx.setLineDash([]);
+
+  // Direct end-of-line labels
+  const lastN = nPts[nPts.length - 1];
+  const lastU = uPts[uPts.length - 1];
+  ctx.font = 'bold 9px Inter,sans-serif'; ctx.textAlign = 'left';
+  ctx.fillStyle = '#008080';
+  ctx.fillText('Native', lastN.x + 5, lastN.y + 3.5);
+  ctx.fillStyle = '#FF4500';
+  ctx.fillText('You', lastU.x + 5, lastU.y + 3.5);
 
   // Error dots
   data.forEach((d, i) => {
@@ -1317,12 +1354,12 @@ function drawFullSentenceContour(pitchData) {
     const ny = PT + iH - midPt(d.native) * iH;
     const uy = PT + iH - midPt(d.user)   * iH;
     // deviation line
-    ctx.strokeStyle = 'rgba(239,68,68,0.5)'; ctx.lineWidth = 1.5; ctx.setLineDash([3,3]);
+    ctx.strokeStyle = 'rgba(255,69,0,0.5)'; ctx.lineWidth = 1.5; ctx.setLineDash([3,3]);
     ctx.beginPath(); ctx.moveTo(cx, Math.min(ny,uy)); ctx.lineTo(cx, Math.max(ny,uy)); ctx.stroke();
     ctx.setLineDash([]);
     // label
     ctx.font = 'bold 9px Inter,sans-serif'; ctx.textAlign = 'center';
-    ctx.fillStyle = '#ef4444';
+    ctx.fillStyle = '#FF4500';
     ctx.fillText('!', cx, Math.min(ny,uy) - 4);
   });
 }
