Real time chars

--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@ function buildSyllablesFromSTT(text) {
     'vowel-error':   '⚠ Simple Final Error: vowel shape or lip position incorrect'
   };
 
-  return chars.slice(0, 10).map((char, i) => {
+  return chars.map((char, i) => {
     let pinyin;
     if (window.pinyinPro) {
       // Dynamic conversion via pinyin-pro — works for any Chinese character
