--- a/index.html
+++ b/index.html
@@ -1142,7 +1142,9 @@ function buildPitchDataFromSyllables(syllables) {
 /* ═══ FULL-SENTENCE PITCH CONTOUR CANVAS ═══ */
 function buildContourCards(pitchData) {
   const grid = document.getElementById('contourGrid');
-  const sentenceTitle = (pitchData || SENTENCE_PITCH).map(d => d.char).join('');
+  const data  = pitchData || SENTENCE_PITCH;
+  const minW  = Math.max(900, data.length * 60);
+  const sentenceTitle = data.map(d => d.char).join('');
   grid.innerHTML = `
     <div class="contour-card" style="grid-column:1/-1">
       <div class="contour-header">
@@ -1153,10 +1155,10 @@ function buildContourCards(pitchData) {
           <div class="contour-pinyin">Full Sentence — F0 Pitch Contour</div>
         </div>
       </div>
-      <div class="contour-canvas-wrap" style="padding:20px 24px 8px">
-        <canvas id="cv_full" width="900" height="160" style="width:100%;height:160px;display:block"></canvas>
+      <div class="contour-canvas-wrap">
+        <canvas id="cv_full" width="${minW}" height="160" style="width:100%;min-width:${minW}px;height:160px;display:block"></canvas>
       </div>
-      <div class="contour-legend" style="padding:0 24px 18px;gap:24px">
+      <div class="contour-legend">
         <div class="legend-item">
           <svg width="32" height="14" style="vertical-align:middle;margin-right:4px">
             <line x1="0" y1="7" x2="32" y2="7" stroke="#008080" stroke-width="2.5"/>
@@ -1172,7 +1174,7 @@ function buildContourCards(pitchData) {
           </svg>
           <span style="font-size:11px;color:var(--text2)">Your recording</span>
         </div>
-        <div class="legend-item" style="margin-left:auto;font-size:11px;color:var(--text3)">
+        <div class="legend-item" style="font-size:11px;color:var(--text3)">
           <span style="display:inline-block;width:10px;height:10px;background:rgba(245,158,11,0.25);border:1px solid #f59e0b;border-radius:2px;margin-right:4px"></span>Initial error &nbsp;
           <span style="display:inline-block;width:10px;height:10px;background:rgba(59,130,246,0.20);border:1px solid #3b82f6;border-radius:2px;margin-right:4px"></span>Compound error &nbsp;
           <span style="display:inline-block;width:10px;height:10px;background:rgba(255,69,0,0.20);border:1px solid #FF4500;border-radius:2px;margin-right:4px"></span>Tone error
